# Software-Quality-Observatory-Orchestrator-TFG

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codemeta.json
containers/rsfc_container/: .dockerignore  Dockerfile  pyproject.toml
containers/rsfc_container/rsfc-main/src/rsfc/harvesters/: github_harvester.py  somef_harvester.py
containers/rsfc_container/rsfc-main/src/rsfc/rsfc_tests/: rsfc_tests.py
containers/rsfc_container/rsfc_runner/: config.py  init_db.py  main.py  worker.py
containers/rsfc_container/rsfc_runner/cruds/: __init__.py  functions.py
containers/rsfc_container/rsfc_runner/database/: __init__.py  engine.py  init_db.py  init_db.sh  models.py
containers/rsfc_container/rsfc_runner/models/: __init__.py  classes.py
containers/rsfc_container/rsfc_runner/rabbitmq/: __init__.py  client.py  rate_limiter.py
containers/rsfc_container/rsfc_runner/routers/: functions.py
containers/soca_container/: .dockerignore  Dockerfile  initial_configs.sh  pyproject.toml
containers/soca_container/soca/: setup.cfg
containers/soca_container/soca/src/soca/: __main__.py
containers/soca_container/soca/tests/csv_files/: repos.csv
containers/soca_container/soca/tmp/repositories/: KnowledgeCaptureAndDiscoveryANDmintproject.csv  LinkedEarth.csv  oeg-upm.csv
containers/soca_container/soca_runner/: config.py  main.py  worker.py
containers/soca_container/soca_runner/cruds/: __init__.py  functions.py
containers/soca_container/soca_runner/models/: __init__.py  classes.py
containers/soca_container/soca_runner/rabbitmq/: __init__.py  client.py  rate_limiter.py
containers/soca_container/soca_runner/routers/: functions.py
(+42 files in other folders)
