[project]
name = "rsfc-runner"
version = "0.4.0"
description = ""
authors = [
    {name = "SergioZSZ",email = "s.zaballosh@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11, <=3.13"
dependencies = [
    "rsfc (>=0.1.2,<0.2.0)",
    "fastapi (>=0.134.0,<0.135.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
