[project]
name = "soca-runner"
version = "0.4.0"
description = ""
authors = [
    {name = "SergioZSZ",email = "s.zaballosh@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "portalocker (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
